docs: sync README English translation and add language links